2007-03-07 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Pointed at LJM rather than St. Andrews
        
        * bin/user_agent.pl: Pointed to LT proxy on estar3 rather than on
          the LT proxy machine in La Palma.

2007-02-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/estar/cgi-bin/mobile.cgi: Added a mobile version of the status
	  page. Still needs a lot of work.

2007-02-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Bug fix!
	
2007-02-06 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/Util.pm: Fixed fudge_project() to handle non-empty projects.
        
        * eSTAR/UA/Handler.pm: Added better error reporting on 'reject' messages
        
        * bin/user_agent.pl: Pointed User Agent at "native" LT proxy machine,
          fixed passing of <Project> tag between messages.
        
        * bin/make_observation.pl: Added passing of <Project> tag.
        
        * www/robonet-1.0/cgi-bin/status.cgi: Added RA&Dec hover tip for non
          Exo-planet or SNe observations.

2007-01-03 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Added offset for WFCAM
        
2007-01-02 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl: Added debugging to FTP connection.
        
        * bin/gcn_server.pl: Switched to WFCAM mode, added some comments.
          Need to move to dynamically switching based on phase zero query
          to the JAC embedded agent.
          
        * startup/gcn_programme: Moved to direct connection to NASA server,
          dropped use of gcn forwarder.
          
        * eSTAR/JACH/Handler.pm: Moved to XML::Document::RTML from the older
          eSTAR::RTML::Parse and eSTAR::RTML::Build modules.
          
        * www/ukirt/cgi-bin/status.cgi: Added some query fallback  

2006-12-20 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/noao_client.pl: Bug fixes
        
        * www/robonet-1.0/cgi-bin/status.cgi: bug fix for trailing letters